<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">未来智家</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="door">门禁控制</string>
	<string name="aircondition">空调控制</string>
	<string name="curtain">窗帘控制</string>
	<string name="lamp">灯光控制</string>
	
	<string name="temperature">温度:31</string>
	<string name="humidity">湿度:40%RH</string>
	
	<string name="opened">开</string>
	<string name="closed">关</string>
	
	<string name="username">账户</string>
	<string name="password">密码</string>
	
	<string name="login">登录</string>
	
	<string name="login_hint">请输入登录账号</string>
	<string name="password_hint">请输入登录密码</string>
	
	<string name="ip_hint">请输入目标地址</string>
	<string name="port_hint">请输入目标端口</string>
	
	<string name="ip">目标地址</string>
	<string name="port">目标端口</string>
	
	<string name="ip_value">192.168.0.1</string>
	<string name="port_value">65537</string>

</resources>
