<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/input1">
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/username">
	    </TextView> 
	    <EditText
	        android:id="@+id/etUser"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/login_hint" />
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input1">
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/password"></TextView>
	
	    <EditText
	        android:id="@+id/etPass"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:password="true"
	        android:ems="10"
	        android:hint="@string/password_hint" />
    </LinearLayout>
    
    
    <LinearLayout 
        android:layout_below="@id/input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	
	    <Button
	        android:id="@+id/login_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/login" 
	        android:onClick="onBtnLogin"
	        android:background="#00ff00"
	        />

	</LinearLayout>
</RelativeLayout>