<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="#ffffff">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input1"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ip">
	    </TextView> 
	    
	    <EditText
	        android:id="@+id/connectionurl"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/ip_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input1"
        android:orientation="horizontal">   
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/port">
	    </TextView>	
	    
	    <EditText
	        android:id="@+id/controlurl"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/port_hint" />
    </LinearLayout>
    
</RelativeLayout>